--- a/src/2-10-antider.tex
+++ b/src/2-10-antider.tex
@@ -22,7 +22,7 @@ An \textbf{antiderivative} of a function on an interval $I$ is another function 
     \[
         \frac{d}{dx} (F(x) - G(x)) = 0.
     \]
-    Hence by the result in Section 2.8, $F(x) = G(x) + C$ for some constant $C$.
+    By one of the consequences of the Mean Value Theorem, which says that if the derivative of a function is zero in an interval, that function must be constant in that interval. So $F(x) = G(x) + C$ for some constant $C$.
 \end{itemize}
 
 
