--- a/src/P-4-functions.tex
+++ b/src/P-4-functions.tex
@@ -57,11 +57,19 @@
 % \end{example}
 
 \subsection*{Graph of a function}
-The \emph{graph of a function} $f$ is the set of all points whose coordinates are $(x, f(x))$ where $x$ is in the domain of $f$.
+\begin{quote}
+  A picture is worth a thousand words.
+\end{quote}
 
-\begin{figure}[th]
+The \emph{graph of a function} $f$ is the set of all points whose coordinates are $(x, f(x))$ where $x$ is in the domain of $f$. We can visualize a function by plotting its graph set on the Cartesian plane.
+
+\begin{quote}
+  Why is visualization important? The answer probably lies in human psychology.
+\end{quote}
+
+\begin{figure}[H]
   \centering
-  \input{figures/P4-graphOFf.tex}
+  \input{figures/P4-graph.tikz}
 \end{figure}
 
 \subsection*{Some Elementary Functions}
