--- a/src/2-8-mean.tex
+++ b/src/2-8-mean.tex
@@ -139,8 +139,8 @@
   \end{solution}
 
   We know that if $f$ is a constant function then its derivative is zero. The converse is also true.
-  \begin{theorem}
-    If $f$ is continuous on the interval $I$ and $f'(x) = 0$ at every interior point $x$ of $I$ then $f(x) = C$, a constant on $I$.
+  \begin{theorem} \label{THM: functions with zero derivative are constant}
+    If $f'(x) = 0$ on an interval $I$ then $f(x) = C$, a constant on $I$.
   \end{theorem}
   \begin{proof}
     Choose $x_0$ in $I$. Let $C = f(x_0)$. If $x$ is any other point in $I$ then by Mean Value Theorem, $f(x) - f(x_0) = f'(c) (x-x_0) = 0$.
