--- a/src/P-2-cartesian.tex
+++ b/src/P-2-cartesian.tex
@@ -1,20 +1,27 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-  \begin{minipage}[c]{0.5\textwidth}
-    Cartesian plane is $\mathbb{R}\times \mathbb{R} = \{(x,y) \mid x \in \mathbb{R} \text{ and } b \in \mathbb{R} \}$. Horizontal axis is usually called the $x$ axis, the vertical axis is called the $y$ axis. Intersection of the axes is called the origin, denoted $O$.
+
+   ~
+  \begin{minipage}{0.5\textwidth}
+    Cartesian plane is
+    \[
+      \mathbb{R}\times \mathbb{R} = \{(x,y) \mid x \in \mathbb{R} \text{ and } b \in \mathbb{R}\}.
+    \]
+    Horizontal axis is usually called the $x$ axis, the vertical axis is called the $y$ axis. Intersection of the axes is called the origin, denoted $O$.
   \end{minipage}
-  \begin{minipage}[c]{0.5\textwidth}
+  %
+  \begin{minipage}{0.5\textwidth}
     \begin{figure}[H]
       \centering
       \input{figures/P2-cartesian.tikz}
     \end{figure}
   \end{minipage}
 
-  \begin{minipage}[c]{0.5\textwidth}
+  \begin{minipage}{0.5\textwidth}
     The coordinate axes divide the Cartesian plane into four quadrants.
   \end{minipage}
-  \begin{minipage}[c]{0.5\textwidth}
+  \begin{minipage}{0.5\textwidth}
     \begin{figure}[H]
       \centering
       \input{figures/P2-quadrants.tikz}
